--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "## Your Task",
+  "description": "This application is used to write and save notes.",
   "main": "server.js",
   "scripts": {
+    "start": "npm install -g serve; serve -s build ",
+    "heroku-postbuild": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rochak Shrestha",
